# metron

./: .env.example  .gitignore  .gitleaks-baseline.json  CONTRIBUTING.md  README.md  SECURITY.md  flow-doctor.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  pip-audit.yml
api/: __init__.py  config.py  entitlements.py  main.py  maintenance.py  plugins.py
api/db/: __init__.py  models.py  session.py
api/routers/: events.py  indices.py  macro.py  me.py  meta.py  portfolios.py  research_intel.py  tax_planning.py
api/services/: __init__.py  account_meta.py  alerting.py  analyst.py  analytics.py  attractiveness.py  attribution.py  auth_jwt.py  broker_sync.py  calendar.py  classifications.py  compute_cache.py  countries.py  crypto.py  data_spine.py  demo.py  diagnostics.py  events.py  factor_profiles.py  fund_proxy.py  fundamentals.py  fx.py  identity.py  indices.py  intraday.py  labels.py  macro.py  market_snapshot.py  metrics_enrichment.py  performance.py  persistence.py  prices.py  reconciliation.py  risk.py  sectors.py  security_perf.py  security_performance.py  sentiment.py  shadow_recompute.py  tax.py  (+3 more)
infrastructure/: deploy-on-merge.sh  metron_runner_spot_bootstrap.sh
infrastructure/iam/: README.md  metron-runner-executor-role-policy.json
portfolio_analytics/: __init__.py
portfolio_analytics/broker_io/: __init__.py  csv_import.py  file_import.py  flex_xml.py  manual_entry.py  ofx_import.py  realized_income.py  snaptrade_reader.py  transactions.py
portfolio_analytics/calendar/: __init__.py  source.py  spine_source.py  yfinance_source.py
portfolio_analytics/domain/: __init__.py  diagnostics.py  ledger.py  realized.py  realized_lots_export.py  stress.py  tax.py
portfolio_analytics/ingestion/: __init__.py  base.py  ibkr_flex_connector.py  ingest.py  reader_adapter.py  reference_connector.py  research_intel_connector.py  research_intel_store.py  schema.py  snaptrade.py  store.py  tax_projection_store.py
portfolio_analytics/macro/: __init__.py  fred_source.py  source.py  spine_source.py
portfolio_analytics/prices/: __init__.py  source.py  spine_source.py  yfinance_source.py
portfolio_analytics/sectors/: __init__.py  geo.py  source.py  spine_source.py  yfinance_source.py
tests/: conftest.py  test_account_cash.py  test_account_detail.py  test_account_meta.py  test_account_panel.py  test_analytics_egress_cache.py  test_analytics_ledger.py  test_analytics_realized.py  test_analytics_stress.py  test_analytics_tax.py  test_attractiveness.py  test_attribution.py  test_auth_jwt.py  test_beta_no_yfinance.py  test_bond_normalization.py  test_broker_sync.py  test_calendar.py  test_compute_cache.py  test_connectors.py  test_connectors_snaptrade.py  test_consensus_sentiment.py  test_countries.py  test_crypto.py  test_csv_import.py  test_data_spine.py  test_demo.py  test_diagnostics.py  test_entitlements.py  test_entitlements_enforcement.py  test_events_service.py  test_flex_api.py  test_fund_proxy.py  test_golden_portfolios.py  test_holdings_by_account.py  test_holdings_metrics.py  test_holdings_perf_series.py  test_holdings_snapshot_source.py  test_holdings_view_prefs.py  test_ibkr_flex.py  test_ibkr_flex_connector.py  (+61 more)
web/: .env.example  .gitignore  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
web/__tests__/: account-panel.test.tsx  account-scope-chip.test.tsx  advisor-profile-form.test.tsx  allocation-breakdown.test.tsx  build-url.test.ts  cache-identity.test.ts  diagnostics-card.test.tsx  format.test.ts  grouped-by-account.test.tsx  grouped-holdings.test.tsx  guard-no-user-advisor-strings.test.ts  holdings-attractiveness.test.tsx  holdings-by-account.test.tsx  holdings-classify.test.tsx  holdings-column-definitions.test.tsx  holdings-column-presets.test.tsx  holdings-consensus.test.tsx  holdings-day-columns.test.tsx  holdings-estimated-badge.test.tsx  holdings-label.test.tsx  holdings-live-provenance.test.tsx  holdings-metrics.test.tsx  holdings-perf-chart.test.tsx  holdings-positions-stale-badge.test.tsx  holdings-table-resize.test.tsx  holdings-table-virtualization.test.tsx  holdings-type-column.test.tsx  holdings-type-filter.test.tsx  holdings-view-persistence.test.tsx  holdings-whatif-math.test.tsx  holdings-whatif-panel.test.tsx  invite-gate.test.ts  locked.test.tsx  macro-chart.test.tsx  middleware-cookie-purge.test.ts  nav-chart.test.ts  perf-tiles.test.tsx  portfolio-nav.test.tsx  preferences-form.test.tsx  selection.test.ts  (+6 more)
web/app/: actions.ts  globals.css  layout.tsx  page.tsx
web/app/api/auth/[...all]/: route.ts
web/app/demo/: route.ts
web/app/login/: page.tsx
web/app/portfolios/[id]/: actions.ts  intraday-action.ts  loading.tsx  markets-action.ts  page.tsx
web/app/portfolios/[id]/advisor/: page.tsx
web/app/privacy/: page.tsx
web/app/signup/: page.tsx
web/app/terms/: page.tsx
web/components/: account-panel.tsx  account-scope-chip.tsx  advisor-profile-form.tsx  allocation-breakdown.tsx  as-of-close.tsx  auth-forms.tsx  build-history.tsx  collapsible-section.tsx  column-bands-context.tsx  compute-attribution.tsx  compute-risk.tsx  create-portfolio.tsx  crypto-panel.tsx  demo-banner.tsx  diagnostics-card.tsx  generate-advisor.tsx  grouped-by-account.tsx  grouped-by-classification.tsx  grouped-holdings.tsx  holdings-column-presets.tsx  holdings-perf-chart.tsx  holdings-poller.tsx  holdings-table.tsx  holdings-type-filter.tsx  holdings-view-with-swr.tsx  holdings-view.tsx  holdings-whatif-panel.tsx  import-panel.tsx  intraday-refresher.tsx  live-valuation-context.tsx  macro-chart.tsx  macro-strip.tsx  mobile-nav.tsx  nav-bridge.tsx  nav-chart.tsx  perf-tiles.tsx  portfolio-nav.tsx  refresh-calendar.tsx  refresh-prices.tsx  rename-portfolio.tsx  (+12 more)
web/lib/: account-meta.ts  api.ts  auth-client.ts  auth.ts  demo.ts  email.ts  entitlements.ts  format.ts  invite-gate.ts  selection.ts  session.ts  track.ts  use-account-selection.ts  use-crypto.ts  use-holdings.ts  use-intraday-status.ts  use-watchlist.ts  whatif.ts
(+27 files in other folders)
