# Metron — public, multi-tenant portfolio-analytics SaaS. Nous Ergon product at
# metron.nousergon.ai. "Portfolio analytics, measured." AGPL-3.0 (self-hostable;
# the hosted service + proprietary data feeds are the commercial moat). No AI, no
# ads/trackers, no advice, read-only.
#
# One codebase, two top-level packages:
#   portfolio_analytics/  — the pure engine (domain math + broker ingestion), built
#                           on the published quant core in alpha-engine-lib[quant].
#   api/                  — FastAPI service + multi-tenant Postgres schema over it.
# (Next.js/Tremor web/ lands in PH2.) Dev on SQLite = $0; prod on Postgres.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metron"
version = "0.0.1"
description = "Metron — multi-tenant portfolio-analytics SaaS. Engine + FastAPI backend. No AI, no ads, no advice, read-only."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    # --- web/API tier ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Multipart parsing for CSV/OFX file uploads (FastAPI UploadFile requires it).
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # --- engine tier (portfolio_analytics/) ---
    "pandas>=2.0",
    "numpy>=1.26",
    # Quant core (factor risk, attribution, returns, VaR/CVaR, riskstats). Public on
    # PyPI, MIT — the same engine the alpha-engine fleet uses. Imported, not vendored.
    "alpha-engine-lib[quant]>=0.46",
    # Thin SnapTrade REST client used by portfolio_analytics.broker_io.snaptrade_reader
    # (imported at module load; tests stub the client but the import still runs).
    "snaptrade-python-sdk>=11.0.198",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",            # FastAPI TestClient
    "psycopg[binary]>=3.2",   # Postgres driver (prod); SQLite needs nothing extra
]

[tool.hatch.build.targets.wheel]
packages = ["api", "portfolio_analytics"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4"]
ignore = ["E501", "C408"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection markers are designed to be called in argument
# defaults — whitelist them so B008 doesn't fight the framework's idiom.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Header", "fastapi.Query", "fastapi.Path", "fastapi.Body", "fastapi.File"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["portfolio_analytics", "api"]
omit = [
    "*/__init__.py",
    # Thin SnapTrade REST client — exercised live, not in units.
    "portfolio_analytics/broker_io/snaptrade_reader.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
