# Metron — public, multi-tenant portfolio-analytics SaaS. Nous Ergon product at
# metron.nousergon.ai. "Portfolio analytics, measured." AGPL-3.0 (self-hostable;
# the hosted service + proprietary data feeds are the commercial moat). No AI, no
# ads/trackers, no advice, read-only.
#
# One codebase, two top-level packages:
#   portfolio_analytics/  — the pure engine (domain math + broker ingestion), built
#                           on the published quant core in nousergon-lib[quant].
#   api/                  — FastAPI service + multi-tenant Postgres schema over it.
# (Next.js/Tremor web/ lands in PH2.) Dev on SQLite = $0; prod on Postgres.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metron"
version = "0.0.1"
description = "Metron — multi-tenant portfolio-analytics SaaS. Engine + FastAPI backend. No AI, no ads, no advice, read-only."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    # --- web/API tier ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.51.0",
    # Multipart parsing for CSV/OFX file uploads (FastAPI UploadFile requires it).
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.3",
    # Verifies the shared nousergon-auth identity service's EdDSA/Ed25519 JWTs against
    # its JWKS (metron-ops#179) — [crypto] pulls in `cryptography` for the Ed25519 path.
    "pyjwt[crypto]>=2.8",
    # --- engine tier (portfolio_analytics/) ---
    "pandas>=3.0.3",
    "numpy>=1.26",
    # Quant core (factor risk, attribution, returns, VaR/CVaR, riskstats) + the shared
    # cost-telemetry & SFT-capture chokepoints (nousergon_lib.sft). AGPL-3.0 (the internal
    # NE dedup lib, relicensed from MIT at 0.60.0) — fine here, metron core is AGPL too.
    # Renamed alpha-engine-lib → nousergon-lib at 0.60.0; old `alpha_engine_lib.*` imports
    # still resolve via the in-package shim. Imported from PyPI, not vendored.
    # [quant-stats] added at 0.110.0 for quant.stats.dsr.compute_psr (PSR in the
    # portfolio performance risk basket, metron-ops#190) — needs the >=0.110.0 floor
    # specifically because compute_psr only gained its periods_per_year param there
    # (nousergon-lib#193); Metron's NAV-snapshot cadence is irregular per-user-refresh,
    # not daily, so the pre-0.110.0 hardcoded-252 PSR would silently mis-annualize.
    "nousergon-lib[quant,quant-stats]>=0.116.0",
    # flow-doctor pipeline error-handler via krepis (MIT). krepis owns the
    # logging+flow-doctor glue; metron is AGPL but pulls the MIT commodity
    # layer from krepis and only the AGPL quant core from nousergon-lib.
    "krepis[flow_doctor]>=0.2.0",
    # Thin SnapTrade REST client used by portfolio_analytics.broker_io.snaptrade_reader
    # (imported at module load; tests stub the client but the import still runs).
    "snaptrade-python-sdk>=11.0.198",
    # OFX/QFX parsing (spec-strict) for the free-tier OFX import path.
    "ofxtools>=0.9.5",
    # S3 client for the data spine. `alpha-engine-data` is the single market/reference-
    # data ground truth for the Nous Ergon system; Metron publishes its held-ticker
    # universe and reads EOD closes / FX / sectors / earnings from its S3 artifacts —
    # it makes NO direct market-data API calls (no yfinance). Remaining external fetch:
    # FRED (Macro page) — a separate spine cutover (the producer already emits macro).
    "boto3>=1.43.49",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",            # FastAPI TestClient
    "psycopg[binary]>=3.3.4",   # Postgres driver (prod); SQLite needs nothing extra
    # Validates the realized-lots export against the pinned telos contract schema in CI
    # (tests/test_realized_lots_export_contract.py) so the export can't silently drift from
    # nousergon/telos realized_lots v1.0.0 — metron-ops#127.
    "jsonschema>=4.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["api", "portfolio_analytics"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4"]
ignore = ["E501", "C408"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection markers are designed to be called in argument
# defaults — whitelist them so B008 doesn't fight the framework's idiom.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Header", "fastapi.Query", "fastapi.Path", "fastapi.Body", "fastapi.File"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["portfolio_analytics", "api"]
omit = [
    "*/__init__.py",
    # Thin SnapTrade REST client — exercised live, not in units.
    "portfolio_analytics/broker_io/snaptrade_reader.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
